--- a/src/app/pages/attendance/components/list-attendance/list-attendance.component.html
+++ b/src/app/pages/attendance/components/list-attendance/list-attendance.component.html
@@ -31,7 +31,7 @@
       <table-column header="Email" key="studentEmail" [width]="'200px'"></table-column>
       <table-column header="{{ 'phone_number' | translate }}" key="numOfAttendance" [width]="'200px'"></table-column>
       <table-column header="{{ 'class' | translate }}" key="className" [width]="'200px'"></table-column>
-      <table-column header="{{ 'session_name' | translate }}" key="lessonName" [width]="'200px'"></table-column>
+      <table-column header="{{ 'lesson_name' | translate }}" key="lessonName" [width]="'200px'"></table-column>
       <table-column header="{{ 'course_name' | translate }}" key="courseName" [width]="'200px'"></table-column>
       <table-column header="{{ 'teacher_name' | translate }}" key="teacherName" [width]="'200px'"></table-column>
       <table-column header="{{ 'organization' | translate }}" key="organizationName" [width]="'200px'"></table-column>
