--- a/src/app/pages/attendance/components/list-lesson/list-lesson.component.html
+++ b/src/app/pages/attendance/components/list-lesson/list-lesson.component.html
@@ -1,5 +1,5 @@
 <div class="title-page">
-  {{'sessions' | translate}}
+  {{'lessons' | translate}}
 </div>
 
 <div class="header-btn">
@@ -12,7 +12,7 @@
         fixColumn="left"></table-column>
       <table-column header="{{ 'check_in_url' | translate }}" key="attendanceLink" [width]="'200px'"></table-column>
       <table-column header="{{ 'check_in_time' | translate }}" key="timeFrame" [width]="'200px'"></table-column>
-      <table-column header="{{ 'ongoing_session' | translate }}" key="lessonName" [width]="'200px'"></table-column>
+      <table-column header="{{ 'ongoing_lesson' | translate }}" key="lessonName" [width]="'200px'"></table-column>
       <table-column header="{{ 'opening_class' | translate }}" key="className" [width]="'200px'"></table-column>
       <table-column header="{{ 'course_name' | translate }}" key="courseName" [width]="'200px'"></table-column>
       <table-column header="{{ 'teacher_name' | translate }}" key="teacherName" [width]="'200px'"></table-column>
