--- a/src/app/pages/e-learning-membership/components/request-upgrade/request-upgrade.component.html
+++ b/src/app/pages/e-learning-membership/components/request-upgrade/request-upgrade.component.html
@@ -1,5 +1,5 @@
 <div class="title-page">
-  {{ 'upgrade_requests' | translate }}
+  {{ 'upgrade_request_list' | translate }}
 </div>
 
 <div class="header-btn">
