--- a/src/app/pages/email/components/notifications-email-list/notifications-email-list.component.html
+++ b/src/app/pages/email/components/notifications-email-list/notifications-email-list.component.html
@@ -1,5 +1,5 @@
 <div class="title-page">
-  {{'notification_emails' | translate}}
+  {{'notification_email_list' | translate}}
 </div>
 
 <div class="header-btn">
@@ -23,7 +23,7 @@
       <table-column header="{{ 'no' | translate }}" key="id" [dataType]="COL_DATA_TYPE.INDEX" [width]="'80px'" fixColumn="left"></table-column>
       <table-column header="{{ 'email_name' | translate }}" key="emailSubject" [width]="'200px'"></table-column>
       <table-column header="{{ 'email_type' | translate }}" key="typeName" [width]="'250px'"></table-column>
-      <table-column header="{{ 'session_name' | translate }}" key="lessonName" [width]="'200px'"></table-column>
+      <table-column header="{{ 'lesson_name' | translate }}" key="lessonName" [width]="'200px'"></table-column>
       <table-column header="{{ 'class_name' | translate }}" key="className" [width]="'200px'"></table-column>
       <table-column header="{{ 'course_name' | translate }}" key="courseName" [width]="'200px'"></table-column>
       <table-column header="{{ 'teacher_name' | translate }}" key="speakerName" [width]="'200px'"></table-column>
