--- a/src/app/pages/email/components/system-email-list/system-email-list.component.html
+++ b/src/app/pages/email/components/system-email-list/system-email-list.component.html
@@ -16,7 +16,7 @@
     >
       <table-column header="{{ 'no' | translate }}" key="id" [dataType]="COL_DATA_TYPE.INDEX" [width]="'80px'" fixColumn="left"></table-column>
       <table-column header="Tên email" key="emailSubject" [width]="'200px'"></table-column>
-      <table-column header="{{ 'session_name' | translate }}" key="" [width]="'200px'"></table-column>
+      <table-column header="{{ 'lesson_name' | translate }}" key="" [width]="'200px'"></table-column>
       <table-column header="{{ 'class_name' | translate }}" key="" [width]="'200px'"></table-column>
       <table-column header="{{ 'teacher_name' | translate }}" key="roleName" [width]="'200px'"></table-column>
       <table-column header="{{ 'course_name' | translate }}" key="courseName" [width]="'200px'"></table-column>
