--- a/src/app/pages/guests/components/guests-list/guests-list.component.html
+++ b/src/app/pages/guests/components/guests-list/guests-list.component.html
@@ -1,5 +1,5 @@
 <div class="title-page">
-  {{ 'contact_requests' | translate }}
+  {{ 'contact_request_list' | translate }}
 </div>
 
 <div class="header-btn">
