--- a/src/app/pages/organization/components/permission-organization/permission-organization.component.html
+++ b/src/app/pages/organization/components/permission-organization/permission-organization.component.html
@@ -34,7 +34,9 @@
       <button class="btn primary" nz-button (click)="edit()">
         Lưu
       </button>
-      <button class="btn" nz-button (click)="navigateBack()">Hủy</button>
+      <button class="btn" nz-button (click)="navigateBack()">
+        {{'cancel'|translate}}
+</button>
     </div>
   </div>
 </div>
