--- a/src/app/pages/payment/components/payment-method/payment-method-list/payment-method-list.component.html
+++ b/src/app/pages/payment/components/payment-method/payment-method-list/payment-method-list.component.html
@@ -1,5 +1,5 @@
 <div class="title-page">
-  {{ 'payment_methods' | translate }}
+  {{ 'payment_method_list' | translate }}
 </div>
 
 <div class="header-btn">
