--- a/src/app/pages/referral/components/loyalty-list/loyalty-list.component.html
+++ b/src/app/pages/referral/components/loyalty-list/loyalty-list.component.html
@@ -1,5 +1,5 @@
 <div class="title-page">
-  {{ 'point_contests' | translate }}
+  {{ 'point_contest_list' | translate }}
 </div>
 
 <div class="header-btn">
