--- a/src/app/pages/register-form/components/register-form/register-form.component.html
+++ b/src/app/pages/register-form/components/register-form/register-form.component.html
@@ -48,7 +48,7 @@
           </span>
 
           <span class="custom-action" (click)="removeAttachTicket(data)" *ngIf="data.ticketId" nz-tooltip
-            nzTooltipTitle="{{'unassign_ticket' | translate}}">
+            nzTooltipTitle="{{'unassign' | translate}} {{'ticket' | translate}}">
             <span nz-icon nzType="close" nzTheme="outline" class="custom-icon"></span>
           </span>
         </ng-template>
