--- a/src/app/pages/report/funnel-report/report-funnel-course/report-funnel-course.component.html
+++ b/src/app/pages/report/funnel-report/report-funnel-course/report-funnel-course.component.html
@@ -66,7 +66,7 @@
                 <th [nzLeft]="true" nzWidth="50px" nzAlign="center">
                     {{ 'no' | translate }}
                 </th>
-                <th nzWidth="160px" [nzLeft]="true" nzAlign="center">Tên khóa học</th>
+                <th nzWidth="160px" [nzLeft]="true" nzAlign="center">{{ 'course_name' | translate }}</th>
                 <th nzWidth="160px" [nzLeft]="true" nzAlign="center">Tên lớp học</th>
                 <th nzWidth="180px" nzColumnKey="totalAdsAmount" [nzSortFn]="true" nzAlign="center">Số tiền Ads</th>
                 <th nzWidth="180px" nzColumnKey="totalNumberOfRegistrations" [nzSortFn]="true" nzAlign="center">Số lượt
