--- a/src/app/pages/setting/components/permissions/list-permision/list-permision.component.html
+++ b/src/app/pages/setting/components/permissions/list-permision/list-permision.component.html
@@ -1,5 +1,5 @@
 <div class="title-page">
-  {{ 'permission_groups' | translate }}
+  {{ 'permission_group_list' | translate }}
 </div>
 
 <div class="header-btn">
