--- a/src/app/pages/student/components/studying-student/studying-student.component.html
+++ b/src/app/pages/student/components/studying-student/studying-student.component.html
@@ -50,7 +50,7 @@
         </ng-template>
       </table-column>
       <table-column header="{{ 'class' | translate }}" key="className" [width]="'180px'"></table-column>
-      <table-column header="{{ 'check_in_session' | translate }}" key="lessonAttendances" [width]="'180px'"></table-column>
+      <table-column header="{{ 'check_in_lesson' | translate }}" key="lessonAttendances" [width]="'180px'"></table-column>
       <table-column header="{{ 'learner_name' | translate }}" key="name" [width]="'180px'"></table-column>
       <table-column header="{{ 'phone_number' | translate }}" key="mobile" [width]="'180px'"></table-column>
       <table-column header="Email" key="email" [width]="'180px'"></table-column>
