--- a/src/app/pages/ticket/components/ticket/ticket.component.html
+++ b/src/app/pages/ticket/components/ticket/ticket.component.html
@@ -1,5 +1,5 @@
 <div class="title-page">
-  {{ 'learning_tickets' | translate }}
+  {{ 'learning_ticket_list' | translate }}
 </div>
 
 <div class="header-btn">
