--- a/src/app/pages/transaction/transaction-history/transaction-history.component.html
+++ b/src/app/pages/transaction/transaction-history/transaction-history.component.html
@@ -1,5 +1,5 @@
 <div class="title-page">
-    {{ 'payment_history' | translate }}
+    {{ 'transaction_history' | translate }}
 </div>
 <div>
     <div nz-row style="margin-bottom: 20px;" (keyup.enter)="onSearch()">
