--- a/src/app/pages/class/components/create-class/create-class.component.html
+++ b/src/app/pages/class/components/create-class/create-class.component.html
@@ -1,5 +1,13 @@
 <div class="title-page">
-  {{isCreate? 'Tạo mới lớp học' : 'Chỉnh sửa lớp học'}}
+  <span *ngIf="isCreate">
+    {{'add_new'|translate}}
+  </span>
+  <span *ngIf="!isCreate">
+    {{'modify'|translate}}
+  </span>
+  <span>
+    {{'class' | translate}}
+  </span>
 </div>
 
 <div nz-row>
@@ -8,17 +16,15 @@
       <div nz-row [nzGutter]=[16,16]>
         <div nz-col [nzSpan]="8">
           <span class="text-label">
-            Tên lớp học
+            {{'class_name' | translate}}
             <span class="text-danger">*</span>
           </span>
-          <input
-            nz-input autofocus formControlName="name"
+          <input nz-input autofocus formControlName="name"
             [nzStatus]="(classForm.get('name')?.invalid && (classForm.get('name')?.touched || isSubmit)) ? 'error' : ''">
 
           <span class="text-danger"
-                *ngIf="(classForm.get('name')?.touched || isSubmit)  && classForm.get('name')?.hasError('required')"
-          >
-            Tên lớp học không được để trống
+            *ngIf="(classForm.get('name')?.touched || isSubmit)  && classForm.get('name')?.hasError('required')">
+            {{'class_name' | translate}} {{'cannot_blank' | translate}}
           </span>
         </div>
 
@@ -29,33 +35,23 @@
           </span>
 
           <div>
-            <nz-select [nzDisabled]="!isCreate"
-                       style="display: block"
-                       formControlName="courseId"
-                       [nzStatus]="(classForm.get('courseId')?.invalid && (classForm.get('courseId')?.touched || isSubmit)) ? 'error' : ''"
-            >
-              <nz-option
-                *ngFor="let course of listCourse"
-                [nzValue]="course.id"
-                [nzLabel]="course.title"
-              ></nz-option>
+            <nz-select [nzDisabled]="!isCreate" style="display: block" formControlName="courseId"
+              [nzStatus]="(classForm.get('courseId')?.invalid && (classForm.get('courseId')?.touched || isSubmit)) ? 'error' : ''">
+              <nz-option *ngFor="let course of listCourse" [nzValue]="course.id" [nzLabel]="course.title"></nz-option>
             </nz-select>
           </div>
 
           <span class="text-danger"
-                *ngIf="(classForm.get('courseId')?.touched || isSubmit) && classForm.get('courseId')?.hasError('required')"
-          >
-            Tên khóa học không được để trống
+            *ngIf="(classForm.get('courseId')?.touched || isSubmit) && classForm.get('courseId')?.hasError('required')">
+            {{ 'course_name' | translate }} {{'cannot_blank' | translate}}
           </span>
         </div>
 
         <div nz-col [nzSpan]="8">
           <span class="text-label">
-            Số buổi nghỉ tối đa
+            {{'max_absences' | translate}}
           </span>
-          <nz-input-number
-            style="width: 100%"
-            [nzMin]="0" [nzStep]="1"
+          <nz-input-number style="width: 100%" [nzMin]="0" [nzStep]="1"
             formControlName="maximumLessonWithoutAttendance"></nz-input-number>
         </div>
 
@@ -66,9 +62,16 @@
   <div nz-col [nzSpan]="4">
     <div class="btn-panel">
       <button class="btn primary" nz-button (click)="edit()">
-        {{isCreate? 'Tạo mới' : 'Lưu'}}
+        <span *ngIf="isCreate">
+          {{'add_new'|translate}}
+        </span>
+        <span *ngIf="!isCreate">
+          {{'save'|translate}}
+        </span>
       </button>
-      <button class="btn" nz-button (click)="navigateBack()">Hủy</button>
+      <button class="btn" nz-button (click)="navigateBack()">
+        {{'cancel'|translate}}
+      </button>
     </div>
   </div>
 </div>
