--- a/src/app/pages/class/components/create-lesson/create-lesson.component.html
+++ b/src/app/pages/class/components/create-lesson/create-lesson.component.html
@@ -2,48 +2,42 @@
   <div nz-row [nzGutter]=[16,16]>
     <div nz-col [nzSpan]="18">
       <span class="text-label">
-        Tên buổi học
+        {{'lesson_name' | translate}}
         <span class="text-danger">*</span>
       </span>
 
-      <input
-        nz-input formControlName="name"
+      <input nz-input formControlName="name"
         [nzStatus]="(lessonForm.get('name')?.invalid && (lessonForm.get('name')?.touched || isSubmit)) ? 'error' : ''">
 
       <span class="text-danger"
         *ngIf="(lessonForm.get('name')?.touched || isSubmit)  && lessonForm.get('name')?.hasError('required')">
-        Tên buổi học không được để trống
+        {{'lesson_name' | translate}} {{'cannot_blank' | translate}}
       </span>
     </div>
 
     <div nz-col [nzSpan]="18">
       <span class="text-label">
-        Thời lượng
+        {{'duration' | translate}}
         <span class="text-danger">*</span>
       </span>
 
       <nz-range-picker
         [nzStatus]="(lessonForm.get('duration')?.invalid && (lessonForm.get('duration')?.touched || isSubmit)) ? 'error' : ''"
-        formControlName="duration"
-        [nzShowTime]="{ nzFormat: 'HH:mm' }"
-        nzFormat="dd/MM/YYYY HH:mm"
-      ></nz-range-picker>
+        formControlName="duration" [nzShowTime]="{ nzFormat: 'HH:mm' }" nzFormat="dd/MM/YYYY HH:mm"></nz-range-picker>
 
       <span class="text-danger"
-            *ngIf="(lessonForm.get('duration')?.touched || isSubmit)  && lessonForm.get('duration')?.hasError('required')">
-        Thời lượng không được để trống
+        *ngIf="(lessonForm.get('duration')?.touched || isSubmit)  && lessonForm.get('duration')?.hasError('required')">
+        {{'duration' | translate}} {{'cannot_blank' | translate}}
       </span>
     </div>
 
     <div nz-col [nzSpan]="24" class="btn-group">
       <button nz-button (click)="closeModal()">
-        Hủy
+        {{'cancel' | translate}}
       </button>
       <button nz-button nzType="primary" [nzLoading]="isLoading" (click)="addLesson()">
-        Tạo
+        {{'add_new' | translate}}
       </button>
     </div>
   </div>
 </form>
-
-
