--- a/src/app/pages/e-learning-config/components/introductory-video/intro-video-detail/intro-video-detail.component.html
+++ b/src/app/pages/e-learning-config/components/introductory-video/intro-video-detail/intro-video-detail.component.html
@@ -44,7 +44,9 @@
       <button class="btn primary" nz-button (click)="edit()">
         Lưu
       </button>
-      <button class="btn" nz-button (click)="navigateBack()">Hủy</button>
+      <button class="btn" nz-button (click)="navigateBack()">
+        {{'cancel'|translate}}
+</button>
     </div>
   </div>
 </div>
