--- a/src/app/pages/e-learning-course/components/video/video-list/video-list.component.html
+++ b/src/app/pages/e-learning-course/components/video/video-list/video-list.component.html
@@ -13,7 +13,7 @@
     <button nz-button class="add-btn primary" (click)="create()">{{ 'add_new' | translate }}</button>
     <button nz-button class="add-btn" (click)="delete()">{{ 'remove' | translate }}</button>
     <button nz-button class="add-btn" (click)="backToCourse()"
-            nz-tooltip nzTooltipTitle="Quay lại danh sách khóa học">
+            nz-tooltip nzTooltipTitle="{{ 'back' | translate }} danh sách khóa học">
       <span nz-icon nzType="rollback" nzTheme="outline"></span>
     </button>
     <app-table
