--- a/src/app/pages/landing-page/components/attach-class/attach-class.component.html
+++ b/src/app/pages/landing-page/components/attach-class/attach-class.component.html
@@ -1,10 +1,12 @@
 <div nz-row [nzGutter]=[16,16]>
   <div nz-col [nzSpan]="12">
-    <label class="modal-title">Chọn lớp để gắn</label>
+    <label class="modal-title">
+      {{'pick_a_class' | translate}}
+    </label>
     <nz-select style="display: block"
       [(ngModel)]="selectedClass"
       (nzScrollToBottom)="loadMore()"
-      nzPlaceHolder="Chọn lớp"
+      nzPlaceHolder="{{'pick_a_class' | translate}}"
       nzAllowClear
       [nzDropdownRender]="renderTemplate"
     >
@@ -19,10 +21,10 @@
 
   <div nz-col [nzSpan]="24" class="btn-group">
     <button nz-button (click)="closeModal()">
-      Hủy
+      {{'cancel' | translate}}
     </button>
     <button nz-button nzType="primary" [nzLoading]="loading" (click)="attachClass()">
-      Xác nhận
+      {{'assign' | translate}}
     </button>
   </div>
 </div>
