--- a/src/app/pages/landing-page/components/attach-form/attach-form.component.html
+++ b/src/app/pages/landing-page/components/attach-form/attach-form.component.html
@@ -1,11 +1,13 @@
 <div nz-row [nzGutter]=[16,16]>
   <div nz-col [nzSpan]="24">
-    <label class="modal-title">Chọn form để sử dụng cho landing page</label>
+    <label class="modal-title">
+      {{'pick_a_form' | translate}}
+    </label>
     <nz-select style="display: block"
                [(ngModel)]="listOfSelectForm"
                (nzScrollToBottom)="loadMore()"
                nzMode="multiple"
-               nzPlaceHolder="Chọn form"
+               nzPlaceHolder="{{'pick_a_form' | translate}}"
                nzAllowClear
                [nzDropdownRender]="renderTemplate"
     >
@@ -20,10 +22,10 @@
 
   <div nz-col [nzSpan]="24" class="btn-group">
     <button nz-button (click)="closeModal()">
-      Hủy
+      {{'cancel' | translate}}
     </button>
     <button nz-button nzType="primary" [nzLoading]="loading" (click)="attachForm()">
-      Xác nhận
+      {{'assign' | translate}}
     </button>
   </div>
 </div>
