--- a/src/app/pages/lesson/components/attach-zoom-link/attach-zoom-link.component.html
+++ b/src/app/pages/lesson/components/attach-zoom-link/attach-zoom-link.component.html
@@ -2,7 +2,7 @@
   <div nz-row [nzGutter]=[16,16]>
     <div nz-col [nzSpan]="24">
       <span class="text-label">
-        Link phòng zoom
+        {{'zoom_link' | translate}}
       </span>
 
       <input nz-input formControlName="linkZoom">
@@ -10,7 +10,7 @@
 
     <div nz-col [nzSpan]="24">
       <span class="text-label">
-        ID phòng zoom
+        {{'zoom_id' | translate}}
       </span>
 
       <input nz-input formControlName="zoomId">
@@ -18,7 +18,7 @@
 
     <div nz-col [nzSpan]="24">
       <span class="text-label">
-        Mật khẩu phòng zoom
+        {{'zoom_password' | translate}}
       </span>
 
       <input nz-input formControlName="zoomPassword">
@@ -26,10 +26,10 @@
 
     <div nz-col [nzSpan]="24" class="btn-group">
       <button nz-button (click)="closeModal()">
-        Hủy
+        {{'cancel' | translate}}
       </button>
       <button nz-button nzType="primary" [nzLoading]="isLoading" (click)="attach()">
-        Tạo
+        {{'assign' | translate}}
       </button>
     </div>
   </div>
