--- a/src/app/pages/lesson/components/lesson/lesson.component.html
+++ b/src/app/pages/lesson/components/lesson/lesson.component.html
@@ -1,5 +1,5 @@
 <div class="title-page">
-  {{ 'sessions' | translate }}
+  {{ 'lesson_list' | translate }}
 </div>
 
 <div class="header-btn">
@@ -19,7 +19,7 @@
     >
       <table-column [dataType]="COL_DATA_TYPE.SELECTION" fixColumn="left"></table-column>
       <table-column header="{{ 'no' | translate }}" key="id" [dataType]="COL_DATA_TYPE.INDEX" [width]="'80px'" fixColumn="left"></table-column>
-      <table-column header="{{ 'session_name' | translate }}" key="lessonName" [width]="'200px'"></table-column>
+      <table-column header="{{ 'lesson_name' | translate }}" key="lessonName" [width]="'200px'"></table-column>
       <table-column header="{{ 'attendance_time' | translate }}" key="timeFrame" [width]="'200px'"></table-column>
       <table-column header="{{ 'class_name' | translate }}" key="className" [width]="'200px'"></table-column>
       <table-column header="{{ 'course_name' | translate }}" key="courseName" [width]="'200px'"></table-column>
