--- a/src/app/pages/organization/components/withdraw-config/withdraw-config.component.html
+++ b/src/app/pages/organization/components/withdraw-config/withdraw-config.component.html
@@ -103,7 +103,9 @@
       <button class="btn primary" nz-button (click)="edit()">
         Lưu
       </button>
-      <button class="btn" nz-button (click)="navigateBack()">Hủy</button>
+      <button class="btn" nz-button (click)="navigateBack()">
+        {{'cancel'|translate}}
+</button>
     </div>
   </div>
 </div>
