--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -82,7 +82,9 @@
                 >
                   Lưu
                 </button>
-                <button nz-button>Quay lại</button>
+                <button nz-button>
+                  Quay lại
+                </button>
               </div>
             </div>
           </div>
@@ -267,7 +269,9 @@
                 (click)="changePassword()">
                 Lưu
               </button>
-              <button nz-button (click)="navigateBack()">Quay lại</button>
+              <button nz-button (click)="navigateBack()">
+                Quay lại
+              </button>
             </div>
           </div>
         </form>
@@ -356,7 +360,9 @@
                     (click)="updateInfoTeacher()">
                     Lưu
                   </button>
-                  <button nz-button (click)="navigateBack()">Quay lại</button>
+                  <button nz-button (click)="navigateBack()">
+                    Quay lại
+                  </button>
                 </div>
               </div>
             </div>
