--- a/src/app/pages/register-form/components/attach-ticket/attach-ticket.component.html
+++ b/src/app/pages/register-form/components/attach-ticket/attach-ticket.component.html
@@ -1,11 +1,13 @@
 <div nz-row [nzGutter]=[16,16]>
   <div nz-col [nzSpan]="12">
-    <label class="modal-title">Chọn vé để gắn</label>
+    <label class="modal-title">
+      {{'pick_a_ticket' | translate}}
+    </label>
     <nz-select
       style="display: block"
       [(ngModel)]="selectedTicket"
       (nzScrollToBottom)="loadMore()"
-      nzPlaceHolder="Chọn vé"
+      nzPlaceHolder="{{'pick_a_ticket' | translate}}"
       nzAllowClear
       [nzDropdownRender]="renderTemplate"
     >
@@ -21,10 +23,10 @@
 
   <div nz-col [nzSpan]="24" class="btn-group">
     <button nz-button (click)="closeModal()">
-      Hủy
+      {{'cancel' | translate}}
     </button>
     <button nz-button nzType="primary" [nzLoading]="loading" (click)="attachTicket()">
-      Xác nhận
+      {{'assign' | translate}}
     </button>
   </div>
 </div>
