--- a/src/app/pages/report/elearning-report/report-instructor-course/report-instructor-course.component.html
+++ b/src/app/pages/report/elearning-report/report-instructor-course/report-instructor-course.component.html
@@ -64,7 +64,7 @@
         <thead style="overflow-y: hidden;">
             <tr>
                 <th [nzLeft]="true" nzWidth="50px" nzAlign="center">{{ 'no' | translate }}</th>
-                <th nzWidth="260px" [nzLeft]="true" nzAlign="center">Tên khóa học</th>
+                <th nzWidth="260px" [nzLeft]="true" nzAlign="center">{{ 'course_name' | translate }}</th>
                 <th nzWidth="180px" nzColumnKey="numberOfRegistrations" [nzSortFn]="true" nzAlign="center">Số người
                     đăng ký</th>
                 <th nzWidth="180px" nzColumnKey="numberOfLearners5Percent" [nzSortFn]="true" nzAlign="center">Số người
