--- a/src/app/pages/report/funnel-report/dialog/filter-funnel-course-report/filter-funnel-course-report.component.html
+++ b/src/app/pages/report/funnel-report/dialog/filter-funnel-course-report/filter-funnel-course-report.component.html
@@ -41,7 +41,7 @@
     <div nz-row [nzGutter]="24">
         <div nz-col [nzSpan]="12">
             <nz-form-item>
-                <nz-form-label>Tên khóa học</nz-form-label>
+                <nz-form-label>{{ 'course_name' | translate }}</nz-form-label>
                 <nz-select nzPlaceHolder="---Chọn---" formControlName="courseNameCtrl" class="w-100" nzAllowClear
                     nzShowSearch>
                     <nz-option *ngFor="let item of dropModel.coursesResponse" [nzValue]="item.id"
