--- a/src/app/pages/staff/components/create-staff/create-staff.component.html
+++ b/src/app/pages/staff/components/create-staff/create-staff.component.html
@@ -1,5 +1,13 @@
- <div class="title-page">
-  {{isCreate? 'Tạo mới nhân sự' : 'Chỉnh sửa thông tin nhân sự'}}
+<div class="title-page">
+  <span *ngIf="isCreate">
+    {{'add_new'|translate}}
+  </span>
+  <span *ngIf="!isCreate">
+    {{'modify'|translate}}
+  </span>
+  <span>
+    {{'staff'|translate}}
+  </span>
 </div>
 
 <div nz-row>
@@ -8,105 +16,94 @@
       <div nz-row [nzGutter]=[16,16]>
         <div nz-col [nzSpan]="8">
           <span class="text-label">
-            Tên nhân viên
+            {{'staff_name' | translate}}
             <span class="text-danger">*</span>
           </span>
-          <input
-            nz-input autofocus formControlName="fullName"
+          <input nz-input autofocus formControlName="fullName"
             [nzStatus]="(userForm.get('fullName')?.invalid && (userForm.get('fullName')?.touched || isSubmit)) ? 'error' : ''">
 
           <span class="text-danger"
-                *ngIf="(userForm.get('fullName')?.touched || isSubmit)  && userForm.get('fullName')?.hasError('required')"
-          >
-            Tên nhân viên không được để trống
+            *ngIf="(userForm.get('fullName')?.touched || isSubmit)  && userForm.get('fullName')?.hasError('required')">
+            {{'staff_name' | translate}} {{'cannot_blank' | translate}}
           </span>
         </div>
 
         <div nz-col [nzSpan]="8">
           <span class="text-label">
-            Vai trò
+            {{'role'|translate}}
             <span class="text-danger">*</span>
           </span>
 
           <div>
             <nz-select formControlName="type" nzMode="multiple"
-              [nzStatus]="(userForm.get('type')?.invalid && (userForm.get('type')?.touched || isSubmit)) ? 'error' : ''"
-            >
-              <nz-option
-                *ngFor="let type of listUserType"
-                [nzValue]="type.key"
-                [nzLabel]="type.name"
-              >
+              [nzStatus]="(userForm.get('type')?.invalid && (userForm.get('type')?.touched || isSubmit)) ? 'error' : ''">
+              <nz-option *ngFor="let type of listUserType" [nzValue]="type.key" [nzLabel]="type.name">
               </nz-option>
             </nz-select>
           </div>
 
           <span class="text-danger"
-                *ngIf="(userForm.get('type')?.touched || isSubmit) && userForm.get('type')?.hasError('required')"
-          >
-            Vai trò không được để trống
+            *ngIf="(userForm.get('type')?.touched || isSubmit) && userForm.get('type')?.hasError('required')">
+            {{'role' | translate}} {{'cannot_blank' | translate}}
           </span>
         </div>
 
-        <div nz-col [nzSpan]="8" >
-          <div class="text-label">Trạng thái</div>
+        <div nz-col [nzSpan]="8">
+          <div class="text-label">
+            {{'status'|translate}}
+          </div>
           <nz-switch formControlName="status">
           </nz-switch>
         </div>
 
-        <div nz-col [nzSpan]="8" >
+        <div nz-col [nzSpan]="8">
           <div class="text-label">
             Email
             <span class="text-danger" *ngIf="isCreate">*</span>
           </div>
           <input nz-input formControlName="email" [readonly]="!isCreate"
-                 [nzStatus]="(userForm.get('email')?.invalid && (userForm.get('email')?.touched || isSubmit)) ? 'error' : ''">
+            [nzStatus]="(userForm.get('email')?.invalid && (userForm.get('email')?.touched || isSubmit)) ? 'error' : ''">
 
           <span class="text-danger"
-              *ngIf="(userForm.get('email')?.touched || isSubmit) && userForm.get('email')?.hasError('required')"
-          >
-            Email không được để trống
+            *ngIf="(userForm.get('email')?.touched || isSubmit) && userForm.get('email')?.hasError('required')">
+            Email {{'cannot_blank' | translate}}
           </span>
           <span class="text-danger"
-              *ngIf="(userForm.get('email')?.touched || isSubmit) && userForm.get('email')?.hasError('email')"
-          >
-            Email không đúng định dạng
+            *ngIf="(userForm.get('email')?.touched || isSubmit) && userForm.get('email')?.hasError('email')">
+            Email {{'invalid_format' | translate}}
           </span>
         </div>
 
-        <div nz-col [nzSpan]="8" *ngIf="userForm.get('type')?.value?.includes(4) || userForm.get('type')?.value?.includes(1)">
+        <div nz-col [nzSpan]="8"
+          *ngIf="userForm.get('type')?.value?.includes(4) || userForm.get('type')?.value?.includes(1)">
           <div class="text-label">
-            Mã slug
+            Slug
             <span class="text-danger">*</span>
 
-            <button nz-button nzType="text" nzShape="circle" class="tooltip"
-                    nz-popover nzPopoverContent="Mã slug là 1 chuỗi ký tự gồm số hoặc chữ thường viết liền không dấu hoặc cách nhau bởi dấu gạch ngang (-) và không chứa ký tự đặc biệt">
+            <button nz-button nzType="text" nzShape="circle" class="tooltip" nz-popover
+              nzPopoverContent="Mã slug là 1 chuỗi ký tự gồm số hoặc chữ thường viết liền không dấu hoặc cách nhau bởi dấu gạch ngang (-) và không chứa ký tự đặc biệt">
               <span nz-icon nzType="question" style="height: 14px"></span>
             </button>
           </div>
 
-          <input nz-input formControlName="slugTeacher" placeholder="Ví dụ : nguyen-van-a1"
-                 [nzStatus]="(userForm.get('slugTeacher')?.invalid && (userForm.get('slugTeacher')?.touched || isSubmit)) ? 'error' : ''">
+          <input nz-input formControlName="slugTeacher" placeholder="{{'example' | translate}}: nguyen-van-a1"
+            [nzStatus]="(userForm.get('slugTeacher')?.invalid && (userForm.get('slugTeacher')?.touched || isSubmit)) ? 'error' : ''">
 
           <span class="text-danger"
-                *ngIf="(userForm.get('slugTeacher')?.touched || isSubmit) && userForm.get('slugTeacher')?.hasError('required')"
-          >
-            Mã slug không được để trống
+            *ngIf="(userForm.get('slugTeacher')?.touched || isSubmit) && userForm.get('slugTeacher')?.hasError('required')">
+            Slug {{'cannot_blank' | translate}}
           </span>
         </div>
 
-        <div nz-col [nzSpan]="16" >
+        <div nz-col [nzSpan]="16">
           <div class="text-label">
-            Nhóm quyền
+            {{'permission_group'|translate}}
           </div>
 
           <div>
             <nz-select formControlName="roleIds" nzMode="multiple">
-              <nz-option
-                *ngFor="let permission of listPermission"
-                [nzValue]="permission.id"
-                [nzLabel]="permission.roleName"
-              >
+              <nz-option *ngFor="let permission of listPermission" [nzValue]="permission.id"
+                [nzLabel]="permission.roleName">
               </nz-option>
             </nz-select>
           </div>
@@ -119,9 +116,16 @@
   <div nz-col [nzSpan]="4">
     <div class="btn-panel">
       <button class="btn primary" nz-button (click)="edit()">
-        {{isCreate? 'Tạo mới' : 'Lưu'}}
+        <span *ngIf="isCreate">
+          {{'add_new'|translate}}
+        </span>
+        <span *ngIf="!isCreate">
+          {{'save'|translate}}
+        </span>
       </button>
-      <button class="btn" nz-button (click)="navigateBack()">Hủy</button>
+      <button class="btn" nz-button (click)="navigateBack()">
+        {{'cancel'|translate}}
+      </button>
     </div>
   </div>
 </div>
