--- a/src/app/pages/website-config/components/page-config/edit-page/edit-page.component.html
+++ b/src/app/pages/website-config/components/page-config/edit-page/edit-page.component.html
@@ -1,5 +1,13 @@
 <div class="title-page">
-  {{isCreate? 'Tạo mới website page' : 'Chỉnh sửa website page'}}
+  <span *ngIf="isCreate">
+    {{'add_new'|translate}}
+  </span>
+  <span *ngIf="!isCreate">
+    {{'modify'|translate}}
+  </span>
+  <span>
+    {{'page'|translate}}
+  </span>
 </div>
 
 <div nz-row>
@@ -8,71 +16,62 @@
       <div nz-row [nzGutter]=[16,16]>
         <div nz-col [nzSpan]="8">
           <span class="text-label">
-            Tên page
+            {{'page_name' | translate}}
             <span class="text-danger">*</span>
           </span>
-          <input
-            #pageName
-            nz-input autofocus formControlName="name"
+          <input #pageName nz-input autofocus formControlName="name"
             [nzStatus]="(pageForm.get('name')?.invalid && (pageForm.get('name')?.touched || isSubmit)) ? 'error' : ''">
 
           <span class="text-danger"
-                *ngIf="(pageForm.get('name')?.touched || isSubmit)  && pageForm.get('name')?.hasError('required')"
-          >
-            Tên page không được để trống
+            *ngIf="(pageForm.get('name')?.touched || isSubmit)  && pageForm.get('name')?.hasError('required')">
+            {{'page_name' | translate}} {{'cannot_blank' | translate}}
           </span>
         </div>
 
         <div nz-col [nzSpan]="8">
           <span class="text-label">Slug</span>
-          <input
-            nz-input formControlName="slug"
-            [nzStatus]="(pageForm.get('slug')?.invalid && (pageForm.get('slug')?.touched || isSubmit)) ? 'error' : ''"
-          >
+          <input nz-input formControlName="slug"
+            [nzStatus]="(pageForm.get('slug')?.invalid && (pageForm.get('slug')?.touched || isSubmit)) ? 'error' : ''">
           <span class="text-danger"
-                *ngIf="(pageForm.get('slug')?.touched || isSubmit)  && pageForm.get('slug')?.hasError('pattern')"
-          >
-            Mã slug không đúng định dạng
+            *ngIf="(pageForm.get('slug')?.touched || isSubmit)  && pageForm.get('slug')?.hasError('pattern')">
+            Slug {{'invalid_format' | translate}}
           </span>
         </div>
 
         <div nz-col [nzSpan]="8">
-          <div class="text-label">Loại trang</div>
+          <div class="text-label">
+            {{'page_type' | translate}}
+          </div>
 
           <nz-select formControlName="type">
-            <nz-option  [nzValue]="1" [nzLabel]="'Trang chủ'"></nz-option>
-            <nz-option  [nzValue]="2" [nzLabel]="'Trang thông thường'"></nz-option>
+            <nz-option [nzValue]="1" [nzLabel]="'homepage' | translate"></nz-option>
+            <nz-option [nzValue]="2" [nzLabel]="'normal_page' | translate"></nz-option>
           </nz-select>
         </div>
 
 
         <div nz-col [nzSpan]="16">
-          <div class="text-label">Mô tả</div>
-          <textarea nz-input placeholder="Nhập mô tả" formControlName="description" [nzAutosize]="{ minRows: 3}"></textarea>
+          <div class="text-label">
+            {{'description' | translate}}
+          </div>
+          <textarea nz-input placeholder="{{'enter' | translate }} {{'description' | translate}}" formControlName="description"
+            [nzAutosize]="{ minRows: 3}"></textarea>
         </div>
 
         <div nz-col [nzSpan]="24">
           <span class="text-label">
-            Nội dung page
+            {{'page_content' | translate}}
           </span>
-          <ckeditor
-            name="ckeditor_text"
-            formControlName="contentHtml"
-            editorUrl="https://cdn.ckeditor.com/4.14.0/full/ckeditor.js"
-            [config]="ckEditorConfig"
-          ></ckeditor>
+          <ckeditor name="ckeditor_text" formControlName="contentHtml"
+            editorUrl="https://cdn.ckeditor.com/4.14.0/full/ckeditor.js" [config]="ckEditorConfig"></ckeditor>
         </div>
 
         <div nz-col [nzSpan]="24">
           <span class="text-label">
-            Thẻ seo
+            {{'seo_tags' | translate}}
           </span>
-          <ckeditor
-            name="ckeditor_text"
-            formControlName="seoImage"
-            editorUrl="https://cdn.ckeditor.com/4.14.0/full/ckeditor.js"
-            [config]="ckEditorConfig"
-          ></ckeditor>
+          <ckeditor name="ckeditor_text" formControlName="seoImage"
+            editorUrl="https://cdn.ckeditor.com/4.14.0/full/ckeditor.js" [config]="ckEditorConfig"></ckeditor>
         </div>
       </div>
     </form>
@@ -81,9 +80,16 @@
   <div nz-col [nzSpan]="4">
     <div class="btn-panel">
       <button class="btn primary" nz-button (click)="edit()">
-        {{isCreate? 'Tạo mới' : 'Lưu'}}
+        <span *ngIf="isCreate">
+          {{'add_new'|translate}}
+        </span>
+        <span *ngIf="!isCreate">
+          {{'save'|translate}}
+        </span>
       </button>
-      <button class="btn" nz-button (click)="navigateBack()">Hủy</button>
+      <button class="btn" nz-button (click)="navigateBack()">
+        {{'cancel'|translate}}
+      </button>
     </div>
   </div>
 
